@startuml md

left to right direction
class "Truck" as truck
class "Driver" as driver
class "Manager" as manager
class "Service" as service
class "Customer" as client
class "Transport" as transport
class "Location" as location
class "ServiceStatus" as serviceStatus

driver --> truck : "has"
manager -> driver : "assigns"
driver -> transport : "does"
transport -> serviceStatus
transport --> location : "has"
service --> location : "has"
client -> service : "                          registers"
client -> location : "has"
service -> transport : "executed by"

@enduml